--- a/agro/src/main/resources/application.properties
+++ b/agro/src/main/resources/application.properties
@@ -1,8 +1,5 @@
 server.servlet.context-path=/agro
 server.port=8081
-spring.datasource.url= jdbc:postgresql://localhost:5432/agro
+spring.datasource.url= jdbc:postgresql://172.16.79.152:5432/agro
 spring.datasource.username= agro
 spring.datasource.password= agro
-
-#agregado
-spring.datasource.driver-class-name=org.postgresql.Driver
